fix alignment in top bar

--- a/src/css/mobile.css
+++ b/src/css/mobile.css
@@ -131,14 +131,14 @@ _:-ms-fullscreen, :root .main {
 
 .left-small {
   width: 4.7rem;
-  line-height: 2.95rem;
+/*  line-height: 2.95rem;*/
   border-right: none;
 }
 
 .right-small {
   width: 4.7rem;
   text-align: right;
-  line-height: 2.7rem;
+/*  line-height: 2.7rem;*/
   border-left: none;
 }
 
@@ -172,7 +172,7 @@ _:-ms-fullscreen, :root .main {
 .tab-bar .text-close {
   font-size: 0.9rem;
   font-weight: 400;
-  line-height: 49px;
+/*  line-height: 49px;*/
   color: #656565;
   font-weight: 500;
   transition: all .3s;
